--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,9 +4,16 @@ body {
     background-color: #F5F5F5;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+ /* HEADER  */
 header {
     display: flex;
-    /* width: 1600px; */
+    width: 1600px; 
     height: 80px;
     background-color: #FFF;
 }
@@ -24,7 +31,7 @@ a {
     color: #212121;
 
 }
-a:hover, a:active {
+a:hover, a:active, a:focus {
     color: #2196F3;
 }
 
@@ -75,5 +82,195 @@ a:hover, a:active {
     margin-left: 50px;
 }
 
+/* ШАПКА */
+.button-field {
+    width: 1600px;
+    height: 600px; 
+    background-color: #2F303A;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
 
+h1 {
+    width: 696px;
+    height: 120px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.37;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin: 0 auto;
+}
+
+.order-button {
+    width: 216px;
+    height: 50px;
+    margin: 30px 692px 0 692px;
+    background-color: #2196F3;
+    color: #FFF;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.86;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+}
+
+/* ОСОБЛИВОСТІ */
+
+.advantages {
+    width: 1600px;
+    height: 286px;
+    padding: 94px 215px;
+    background-color: #FFF;
+}
+
+.advantages-list {
+    display: flex;
+}
+
+.advantages-list > li {
+    width: 270px;
+    margin-right: 30px;
+    max-height: 98px;
+}
+
+.advantages-list: last-child {
+    margin-right: 0;
+}
+
+.list-point {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.list-desc {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+/* ЧИМ МИ ЗАЙМАЄМОСЬ */
+
+.work {
+    width: 1600px;
+    height: 480px;
+    /* margin: auto; */
+    background-color: #FFF;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin: 0 auto 50px auto;
+}
+
+.work-images {
+display: flex;
+margin: 0 215px;
+}
+.work-images > li {
+    margin-right: 30px;
+}
+.work-images: :last-child {
+    margin-right: 0;
+}
+
+
+/* НАША КОМАНДА */
+
+.team {
+    width: 1600px;
+    height: 648px;
+    background-color: #F5F4FA;
+    padding-top: 94px;
+}
+
+.team-members {
+    margin: 0 215px;
+    display: flex;
+}
+
+.team-members > li {
+    background-color: #FFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-members > li {
+    margin-right: 30px;
+}
+
+.team-members: :last-child {
+    margin-right: 0;
+}
+
+.team-member {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    }
+
+.speciality {
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+/* НИЖНІЙ КОЛОНТИТУЛ */
+
+footer {
+    width: 1600px;
+    height: 252px;
+    background-color: #2F303A;
+    padding-top: 60px;
+    padding-left: 215px;
+}
+.logo-footer {
+    height: 31px;   
+    font-size: 26px;
+    line-height: 1.19;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    color: #FFF;
+}
+
+.address-list {
+    margin-top: 20px;
+}
+
+.address-item {
+    display: block;
+    margin-bottom: 9px;
+}
+
+.map {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+
+.tel , .mail {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
 
