--- a/styles/styles.css
+++ b/styles/styles.css
@@ -332,6 +332,9 @@ display: inline-table;
     margin-bottom: 30px;
     margin-right: 30px;
     border-color: #EEEEEE;
+    border-width: 1px;
+    border-color: #EEEEEE;
+    border-style: solid;
 }
 .project-item:nth-child(3n+3) {
     margin-right: 0;
@@ -343,6 +346,7 @@ display: inline-table;
     line-height: 2;
     letter-spacing: 0.06em;
     margin-bottom: 4px;
+    margin-left: 24px;
 }
 
 .project-type {
@@ -350,4 +354,5 @@ display: inline-table;
     line-height: 1.8;
     letter-spacing: 0.03em;
     color: #757575;
+    margin-left: 24px;
 }
